--- a/topo-logic-draft.tex
+++ b/topo-logic-draft.tex
@@ -325,8 +325,19 @@ A dependency problem in a DSC \((E,D)\) is the pair of a formula \(\phi\) in \(\
 
 Without further constraints on the objective function, then clearly there is no more efficient method of solving a dependency problem than brute force search over all event sets which satisfy the formula. But that does not mean there is nothing to be said. Rather, it directs us to focus on the efficiency of enumerating such sets, and also the sum total quantity of such sets.
 
+% Formulae should correspond 1-1 with cuts in hasse diagrams.
+% Prove that for a modality, the difficulty of solving <>(phi) <= difficulty of solving phi.
+% for a discrete set, difficulty of solving is bounded by double exponential
+% equipping set with structure -- degenerate case is linear. Question: what formula if any relates structure to cost
+% Question: what if we stratify by tree depth instead of node quantity (or all at once)? i.e. what is general formula for efficiency?
+% Relate to np completeness
+
+
 \section{Related and Future Work}
 % In fact, since \(\Dia\) commutes with meets (i.e. \(\Dia(x \band y) = \Dia{x} \band \Dia{y}\) and  \(\Dia(x \bor y) = \Dia{x} \bor \Dia{y}\))
+% Look at paper ray sent on physics -- sorkin, penrose.
+% Structure of mathematical proofs, knowledge
+
 
 \end{document}
 
